--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@biconomy/account": "^3.1.1",
+    "@biconomy/bundler": "^3.1.1",
+    "@biconomy/common": "^3.1.1",
+    "@biconomy/core-types": "^3.1.1",
+    "@biconomy/node-client": "^3.1.1",
+    "@biconomy/paymaster": "^3.1.1",
+    "@biconomy/web3-auth": "^3.1.0",
     "@types/node": "20.9.4",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
+    "ethers": "^5.7.2",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
